[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.127.0",
    "fastparquet>=2025.12.0",
    "groq>=1.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
